--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
     0% {
         transform: translateX(-100%);
     }
+
     100% {
         transform: translateX(0);
     }
@@ -32,5 +33,9 @@
 
 .nav-item:hover::after {
     width: 75%;
-   
+
+}
+
+.hidden {
+    display: none;
 }
