--- a/src/output.css
+++ b/src/output.css
@@ -263,6 +263,18 @@
   .h-48 {
     height: calc(var(--spacing) * 48);
   }
+  .h-\[\%\] {
+    height: %;
+  }
+  .h-\[5\%\] {
+    height: 5%;
+  }
+  .h-\[7\%\] {
+    height: 7%;
+  }
+  .h-\[8\%\] {
+    height: 8%;
+  }
   .h-\[9\%\] {
     height: 9%;
   }
@@ -274,6 +286,9 @@
   }
   .h-\[81\%\] {
     height: 81%;
+  }
+  .h-\[88\%\] {
+    height: 88%;
   }
   .h-screen {
     height: 100vh;
