--- a/src/output.css
+++ b/src/output.css
@@ -224,8 +224,14 @@
       max-width: 96rem;
     }
   }
+  .m-4 {
+    margin: calc(var(--spacing) * 4);
+  }
   .mx-auto {
     margin-inline: auto;
+  }
+  .my-4 {
+    margin-block: calc(var(--spacing) * 4);
   }
   .my-10 {
     margin-block: calc(var(--spacing) * 10);
@@ -422,6 +428,12 @@
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
+  .pt-4 {
+    padding-top: calc(var(--spacing) * 4);
+  }
+  .pb-4 {
+    padding-bottom: calc(var(--spacing) * 4);
+  }
   .pb-12 {
     padding-bottom: calc(var(--spacing) * 12);
   }
@@ -584,6 +596,16 @@
       height: calc(var(--spacing) * 64);
     }
   }
+  .lg\:h-\[\%\] {
+    @media (width >= 64rem) {
+      height: %;
+    }
+  }
+  .lg\:h-\[1\%\] {
+    @media (width >= 64rem) {
+      height: 1%;
+    }
+  }
   .lg\:h-\[5\%\] {
     @media (width >= 64rem) {
       height: 5%;
@@ -592,6 +614,31 @@
   .lg\:h-\[5\] {
     @media (width >= 64rem) {
       height: 5;
+    }
+  }
+  .lg\:h-\[9\%\] {
+    @media (width >= 64rem) {
+      height: 9%;
+    }
+  }
+  .lg\:h-\[10\%\] {
+    @media (width >= 64rem) {
+      height: 10%;
+    }
+  }
+  .lg\:h-\[10\] {
+    @media (width >= 64rem) {
+      height: 10;
+    }
+  }
+  .lg\:h-\[81\%\] {
+    @media (width >= 64rem) {
+      height: 81%;
+    }
+  }
+  .lg\:h-\[82\%\] {
+    @media (width >= 64rem) {
+      height: 82%;
     }
   }
   .lg\:w-\[75\%\] {
